Adicionado new to do page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -53,7 +53,7 @@
 
     <ion-row>
       <ion-item>
-        <ion-icon name="shere-outline"></ion-icon>
+        <ion-icon name="share-outline"></ion-icon>
         <p>Partilhar</p>
       </ion-item>
 
@@ -70,7 +70,7 @@
   </ion-card>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button>
+    <ion-fab-button (click)="addTask()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
