--- a/src/app/add-new-task/add-new-task.page.html
+++ b/src/app/add-new-task/add-new-task.page.html
@@ -1,13 +1,69 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-title>Adicionar nova tarefa</ion-title>
     <ion-icon
       name="close"
       slot="end"
-      size="large"
+      size="larger"
+      class="ion-padding"
       (click)="dismis()"
     ></ion-icon>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true"> </ion-content>
+<ion-content>
+  <ion-card class="ion-align-self-center">
+    <ion-item>
+      <ion-textarea
+        [(ngModel)]="itemName"
+        placeholder="Escrever a tarefa aqui"
+      ></ion-textarea>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Prioridade</ion-label>
+      <ion-select [(ngModel)]="itemPriority">
+        <ion-select-option value="low">Baixa</ion-select-option>
+        <ion-select-option value="middle">Médio</ion-select-option>
+        <ion-select-option value="high" selected>Alta</ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name="calendar-outline" slot="start"></ion-icon>
+      <ion-label>Data de vencimento </ion-label>
+      <ion-datetime
+        [(ngModel)]="itemDueDate"
+        displayFormat="D MMM YYYY H:mm"
+      ></ion-datetime>
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name="pricetag-outline" slot="start"></ion-icon>
+      <ion-label> Category</ion-label>
+      <span>{{categorySelectedCategory}}</span>
+    </ion-item>
+
+    <ion-item>
+      <ion-chip
+        *ngFor="let tag of categories; let i = index"
+        color="secondary"
+        outline="true"
+        (click)="selectCategory(i)"
+      >
+        <ion-label color="secondary">{{tag}}</ion-label>
+      </ion-chip>
+
+      <ion-chip color="primary" outline="true">
+        <ion-label color="secondary">novo</ion-label>
+        <ion-button fill="clear">
+          <ion-icon slot="icon-only" name="add-outline"></ion-icon>
+        </ion-button>
+      </ion-chip>
+    </ion-item>
+
+    <ion-button class="ion-margin" expand="block" (click)="add()"
+      >Adicionar tarefa</ion-button
+    >
+  </ion-card>
+</ion-content>
